--- a/index.html
+++ b/index.html
@@ -12,14 +12,21 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- header  -->
     <header>
-      <nav class="navbar navbar-expand-lg ">
+      <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand col-6" href="#">Osama Younus</a>
+          <a class="navbar-brand myname col-6" href="#">Osama Younus</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -31,10 +38,13 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse nav-section col-6" id="navbarSupportedContent" >
+          <div
+            class="collapse navbar-collapse nav-section col-6"
+            id="navbarSupportedContent"
+          >
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link watilink active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
@@ -58,11 +68,48 @@
     </header>
     <!-- header end -->
 
+    <!-- banner section-->
+    <div class="container-fluid">
+      <div class="row banner">
+        <div class="col-2  icon social-links">
+          <i class="fab fa-linkedin-in"></i>
+          <i class="fab fa-github"></i>
+          <i class="fab fa-behance"></i>
+        </div>
+        <div class="col-6 align-self-center">
+          <h1>Hi, I'am Osama</h1>
+          <h4>Frontend Developer</h4>
+          <p>
+            High level exprience in web design and development
+            knowedge,producing quality work
+          </p>
+          <button class="banner-btn">Contact me</button>
+        </div>
+        <div class="col-4">
+          <img
+          class="osama-img"
+            src="images/osama.png"
+            alt="picture of developer"
+            title="Osama Younus"
+          />
+        </div>
+      </div>
+      <div class="container_mouse">
+        <span class="mouse-btn">
+            <span class="mouse-scroll"></span>
+        </span>
+        <h6 style="text-align: center;">Scroll Down</h6>
+    </div>
+    </div>
+
+    <!-- banner end -->
+
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
+    <script src="app.js"></script>
   </body>
 </html>
