--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
           >
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link watilink active" aria-current="page" href="#">Home</a>
+                <a class="nav-link watilink active" aria-current="page" href="#"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
@@ -71,7 +73,7 @@
     <!-- banner section-->
     <div class="container-fluid">
       <div class="row banner">
-        <div class="col-2  icon social-links">
+        <div class="col-2 icon social-links">
           <i class="fab fa-linkedin-in"></i>
           <i class="fab fa-github"></i>
           <i class="fab fa-behance"></i>
@@ -87,7 +89,7 @@
         </div>
         <div class="col-4">
           <img
-          class="osama-img"
+            class="osama-img"
             src="images/osama.png"
             alt="picture of developer"
             title="Osama Younus"
@@ -96,14 +98,52 @@
       </div>
       <div class="container_mouse">
         <span class="mouse-btn">
-            <span class="mouse-scroll"></span>
+          <span class="mouse-scroll"></span>
         </span>
-        <h6 style="text-align: center;">Scroll Down</h6>
+        <h6 style="text-align: center">Scroll Down</h6>
+      </div>
     </div>
-    </div>
+   
 
     <!-- banner end -->
 
+
+      <!-- Introduction -->
+    <div class="container about">
+      <div class="trans-about text-center">
+        <h2>About</h2>
+      </div>
+      <h3>About me</h3>
+      <h4>My Introduction</h4>
+      <div class="row">
+        <div class="col-6">
+            <img src="images/Website Creator-illustrator.png" alt="web developer">
+        </div>
+        <div class="col-6 align-self-center">
+          <div class="progress ">
+            <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          <form method="get" action="Osama's CV/OsamaUpdatedCV.pdf">
+            <button type="submit" target="">Download!</button>
+         </form>
+        </div>
+      </div>
+    </div>
+       
+      <!-- Introduction End -->
+        
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
