skills responsive issue solved

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           </div>
               <!-- css -->
               
-              <div class="col-lg-2 col">
+              <div class="col-lg-2 col skills-m">
             <div class="circle-wrap">
               <div class="circle circle-css">
                 <div class="mask mask-css full full-css">
@@ -196,7 +196,7 @@
             </div>
             
               <!-- bootstrap -->
-              <div class="col-lg-2 col">
+              <div class="col-lg-2 col skills-m">
               <div class="circle-wrap">
                 <div class="circle circle-bs">
                   <div class="mask mask-bs full full-bs">
@@ -211,7 +211,7 @@
             </div>
 
               <!-- javascript -->
-              <div class="col-lg-2 col">
+              <div class="col-lg-2 col skills-m">
               <div class="circle-wrap">
                 <div class="circle circle-js">
                   <div class="mask mask-js full full-js">
@@ -228,7 +228,7 @@
 
 
               <!-- firebase -->
-              <div class="col-lg-2 col">
+              <div class="col-lg-2 col skills-m">
               <div class="circle-wrap">
                 <div class="circle circle-firebase">
                   <div class="mask full full-firebase mask-firebase ">
