--- a/index.html
+++ b/index.html
@@ -80,8 +80,15 @@
           <i class="fab fa-behance"></i>
         </div>
         <div class="col-lg-6 align-self-center">
+          <!-- text animation  -->
+
+
+
           <h1>Hi, I'am Osama</h1>
           <h4>Frontend Developer</h4>
+
+          
+          <!-- text animation end -->
           <p>
             High level exprience in web design and development
             knowedge,producing quality work
